working on network-- split off coords of voxel bounds and concating in after PointNe

--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -14,14 +14,12 @@
     "\n",
     "Bring cartesian representation of corners back to training data generation file\n",
     "\n",
-    "Make new network that has parallel channel (outside PointNet) for boundary coordinates\n",
-    "\n",
     "Break test data into \"easy, medium, and hard\" scans with varying degrees of perspective shift\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bacterial-nerve",
    "metadata": {},
    "outputs": [
@@ -73,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "insured-phase",
+   "execution_count": 3,
+   "id": "utility-burst",
    "metadata": {},
    "outputs": [
     {
@@ -170,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "trained-example",
+   "execution_count": 4,
+   "id": "significant-device",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "descending-clause",
+   "execution_count": 5,
+   "id": "floppy-wealth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "motivated-department",
+   "execution_count": 25,
+   "id": "protective-flush",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-portugal",
+   "id": "declared-burst",
    "metadata": {},
    "source": [
     "### Iterative solution for single test sample"
@@ -232,23 +230,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "altered-central",
+   "execution_count": 21,
+   "id": "quiet-philip",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "427\n",
+      "466\n",
       "\n",
-      " correct soln [ 0.5703471   0.88483715 -0.00714883]\n",
+      " correct soln [ 0.9469716  -0.9221112   0.05154501]\n",
       "\n",
-      " estiamted soln: [[ 0.60412293  0.85561393 -0.00882648]]\n",
+      " estiamted soln: [[ 0.91549373 -0.93506957  0.06523528]]\n",
       "\n",
-      " error from DNN: [[-0.03377586  0.02922322  0.00167765]]\n",
+      " error from DNN: [[ 0.03147787  0.01295835 -0.01369026]]\n",
       "\n",
-      " error in means [-0.01638865 -0.00734806 -0.03584408]\n"
+      " error in means [0.02198476 0.09408194 0.00055747]\n"
      ]
     }
    ],
@@ -281,21 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "ranging-decision",
+   "execution_count": 26,
+   "id": "active-liverpool",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([ 0.5644437  -0.00287378 -0.03175014], shape=(3,), dtype=float32)\n"
+      "tf.Tensor([ 0.96293366 -0.01624743  0.02233379], shape=(3,), dtype=float32)\n",
+      "[ 5.17567    3.7603426 -0.6877998]\n",
+      "[ 4.81776    4.2091484 -0.6877998]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4e75211f5634cb1a2b59b27d990d726",
+       "model_id": "d0548c95847e416daa44e221cfcaa924",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,27 +317,57 @@
     "\n",
     "#draw scan1 \n",
     "# disp.append(Points(x_test[n,:points_per_sample].numpy(), c = 'green', r = 5))\n",
-    "disp.append(Points(x_test[n,:points_per_sample], c = 'green', r = 5))\n",
+    "disp.append(Points(x_test[n,:points_per_sample], c = 'red', r = 5))\n",
     "\n",
     "#draw initial scan2\n",
     "# disp.append(Points(x_test[n,points_per_sample:].numpy(), c = 'red', r = 5))\n",
-    "disp.append(Points(x_test[n,points_per_sample:], c = 'red', r = 5))\n",
+    "disp.append(Points(x_test[n,points_per_sample:], c = 'blue', r = 5))\n",
     "\n",
     "#Draw arrow for ground truth soln vec\n",
-    "disp.append(Arrow(mean1, mean1 + y_test[n], c = 'r4', res = 50)) #arbitrarily start arrow from scan1 center\n",
+    "disp.append(Arrow(mean1 + y_test[n], mean1, c = 'y4', res = 100)) #arbitrarily start arrow from scan1 center\n",
     "\n",
     "#draw ground truth arrow cut short by U and L\n",
     "soln_compact = tf.matmul(LUT[n], y_test[n][:, None])\n",
     "soln_compact_xyz = tf.matmul(U[n], soln_compact)[:,0]\n",
+    "# soln_compact_xyz = tf.matmul(tf.transpose(U[n]), soln_compact)[:,0]\n",
     "print(soln_compact_xyz)\n",
-    "disp.append(Arrow(mean1, mean1 + soln_compact_xyz, c = 'p4', res = 50)) #arbitrarily start arrow from scan1 center\n",
+    "disp.append(Arrow( mean2, mean2 - soln_compact_xyz, c = 'p4', res = 100)) #arbitrarily start arrow from scan1 center\n",
     "\n",
     "#draw the set of 8 points that defined the voxel boundaries for the keyframe scan\n",
     "corn_cart = s2c(corn_test[n])\n",
-    "disp.append(Points(corn_cart, c = 'black', r = 10))\n",
+    "# disp.append(Points(corn_cart, c = 'black', r = 10))\n",
+    "\n",
+    "#draw box instead of individual points______________________________\n",
+    "p1, p2, p3, p4, p5, p6, p7, p8 = corn_cart.numpy()\n",
+    "print(p1)\n",
+    "print(p2)\n",
+    "lineWidth = 2\n",
+    "c1 = \"black\"\n",
+    "\n",
+    "arc1 = shapes.Line(p1, p2, c = c1, lw = lineWidth) \n",
+    "disp.append(arc1)\n",
+    "arc2 = shapes.Line(p3, p4, c = c1, lw = lineWidth) #debug\n",
+    "disp.append(arc2)\n",
+    "line1 = shapes.Line(p1, p3, c = c1, lw = lineWidth)\n",
+    "disp.append(line1)\n",
+    "line2 = shapes.Line(p2, p4, c = c1, lw = lineWidth) #problem here\n",
+    "disp.append(line2)\n",
+    "arc3 = shapes.Line(p5, p6, c = c1, lw = lineWidth) #debug\n",
+    "disp.append(arc3)\n",
+    "arc4 = shapes.Line(p7, p8, c = c1, lw = lineWidth) #debug\n",
+    "disp.append(arc4)\n",
+    "line3 = shapes.Line(p5, p7, c = c1, lw = lineWidth)\n",
+    "disp.append(line3)\n",
+    "line4 = shapes.Line(p6, p8, c = c1, lw = lineWidth)\n",
+    "disp.append(line4)\n",
+    "disp.append(shapes.Line(p1,p5, c = c1, lw = lineWidth))\n",
+    "disp.append(shapes.Line(p2,p6, c = c1, lw = lineWidth))\n",
+    "disp.append(shapes.Line(p3,p7, c = c1, lw = lineWidth))\n",
+    "disp.append(shapes.Line(p4,p8, c = c1, lw = lineWidth))\n",
+    "#_____________________________________________________________________\n",
     "\n",
     "#draw transformed scan2\n",
-    "disp.append(Points(c1, c = 'blue', r = 5))\n",
+    "# disp.append(Points(c1, c = 'blue', r = 5))\n",
     "\n",
     "plt1.show(disp, \"Network Performance Test\")\n",
     "ViewInteractiveWidget(plt1.window)\n"
@@ -345,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innovative-domestic",
+   "id": "classified-christopher",
    "metadata": {},
    "source": [
     "### Run network on all test data"
@@ -353,10 +383,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "authentic-pregnancy",
+   "execution_count": 9,
+   "id": "proud-puzzle",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_test tf.Tensor([1472  100    3], shape=(3,), dtype=int32)\n",
+      "\n",
+      " correct soln \n",
+      " [[-1.5052794  -0.061748   -0.02118067]\n",
+      " [-0.72679394 -0.54963243  0.05901803]\n",
+      " [ 0.2958136   0.4468636  -0.04729297]\n",
+      " ...\n",
+      " [ 0.01318293  1.3810297  -0.04743544]\n",
+      " [-1.8122277  -1.8693733  -0.04297731]\n",
+      " [-0.7231753   0.3887675  -0.00653277]]\n",
+      "\n",
+      " estiamted soln: \n",
+      " [[-1.53435132 -0.10067482 -0.0263386 ]\n",
+      " [-0.73839783 -0.5543911   0.03800964]\n",
+      " [ 0.20079211  0.43016075 -0.06339325]\n",
+      " ...\n",
+      " [ 0.04568869  1.43598578 -0.09281087]\n",
+      " [-1.86203559 -1.86440459 -0.02506529]\n",
+      " [-0.76765411  0.49660356 -0.04128042]]\n",
+      "\n",
+      " error from DNN: \n",
+      " [[ 0.0290719   0.03892682  0.00515793]\n",
+      " [ 0.01160388  0.00475867  0.02100839]\n",
+      " [ 0.09502148  0.01670284  0.01610028]\n",
+      " ...\n",
+      " [-0.03250576 -0.05495605  0.04537543]\n",
+      " [ 0.04980786 -0.00496874 -0.01791201]\n",
+      " [ 0.04447882 -0.10783605  0.03474765]]\n",
+      "\n",
+      " mean raw DNN error: \n",
+      " 0.050120725143903255\n",
+      "\n",
+      " mean raw D2D error \n",
+      " 0.051821\n"
+     ]
+    }
+   ],
    "source": [
     "# for n in range(numToTest):\n",
     "c1 = np.array([x_test[:,:points_per_sample,0], x_test[:,:points_per_sample,1], x_test[:,:points_per_sample,2]])\n",
@@ -395,10 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "small-equation",
+   "execution_count": 10,
+   "id": "understanding-gibson",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " mean compact error DNN: \n",
+      " 0.025795382\n",
+      "\n",
+      " mean compact error D2D: \n",
+      " 0.014100906\n"
+     ]
+    }
+   ],
    "source": [
     "#just considering the residuals doesn't tell the whole story \n",
     "#   we need to consider error in COMPACT only directions\n",
@@ -424,16 +508,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "attractive-birthday",
+   "execution_count": 15,
+   "id": "entire-brick",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(8, 3), dtype=float32, numpy=\n",
+       "array([[ 6.597618  , -3.177247  ,  0.78728276],\n",
+       "       [ 6.8558645 , -2.57305   ,  0.78728276],\n",
+       "       [ 7.220676  , -3.4772959 ,  0.8616312 ],\n",
+       "       [ 7.50331   , -2.8160405 ,  0.8616312 ],\n",
+       "       [ 6.6314106 , -3.1935205 ,  0.2628742 ],\n",
+       "       [ 6.89098   , -2.5862288 ,  0.2628742 ],\n",
+       "       [ 7.2576594 , -3.4951062 ,  0.2876992 ],\n",
+       "       [ 7.5417414 , -2.8304641 ,  0.2876992 ]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2c(corn_test[n])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "framed-richards",
+   "id": "mineral-celebration",
    "metadata": {},
    "outputs": [],
    "source": []
