--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -86,9 +86,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -121,19 +145,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "#define functions to convert between spherical and cartesian coordinate representations\n",
+    "def c2s(pts):\n",
+    "    \"\"\" converts points from cartesian coordinates to spherical coordinates \"\"\"\n",
+    "    r = tf.sqrt(pts[:,0]**2 + pts[:,1]**2 + pts[:,2]**2)\n",
+    "    phi = tf.math.acos(pts[:,2]/r)\n",
+    "    theta = tf.math.atan2(pts[:,1], pts[:,0])\n",
+    "\n",
+    "    out = tf.transpose(tf.Variable([r, theta, phi]))\n",
+    "    return(out)\n",
+    "def s2c(pts):\n",
+    "    \"\"\"converts spherical -> cartesian\"\"\"\n",
+    "\n",
+    "    x = pts[:,:,0]*tf.math.sin(pts[:,:,2])*tf.math.cos(pts[:,:,1])\n",
+    "    y = pts[:,:,0]*tf.math.sin(pts[:,:,2])*tf.math.sin(pts[:,:,1]) \n",
+    "    z = pts[:,:,0]*tf.math.cos(pts[:,:,2])\n",
+    "\n",
+    "    out = tf.transpose(tf.Variable([x, y, z]))\n",
+    "    # out = tf.Variable([x, y, z])\n",
+    "    return(out)"
+   ]
   },
   {
    "cell_type": "code",
@@ -141,33 +176,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load data directly from numpy files-- KEEP IN RAM (DO NOT CONVERT TO TF Tensor!!!)\n",
-    "# #_________________________________________________________________\n",
-    "# #load individual data numpy files\n",
-    "# d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_scan1.npy\")\n",
-    "# d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_scan2.npy\")\n",
-    "# gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_ground_truth.npy\")\n",
-    "# # d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_scan1.npy\")\n",
-    "# # d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_scan2.npy\")\n",
-    "# # gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_ground_truth.npy\")\n",
+    "# old way - non-reduced dimension solution, only feed DNN each point cloud\n",
+    "#_________________________________________________________________\n",
+    "#load individual data numpy files\n",
+    "d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_scan1.npy\")\n",
+    "d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_scan2.npy\")\n",
+    "gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v1_ground_truth.npy\")\n",
+    "# d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_scan1.npy\")\n",
+    "# d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_scan2.npy\")\n",
+    "# gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v3_ground_truth.npy\")\n",
     "\n",
-    "# # d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan1_300k_50_samples.npy\")\n",
-    "# # d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan2_300k_50_samples.npy\")\n",
-    "# # gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ground_truth_300k_50_samples.npy\")\n",
-    "# # gt_1 = gt_1*0.1 #scale to match real-world data (vel-> pos)\n",
+    "# d1_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan1_300k_50_samples.npy\")\n",
+    "# d2_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan2_300k_50_samples.npy\")\n",
+    "# gt_1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ground_truth_300k_50_samples.npy\")\n",
+    "# gt_1 = gt_1*0.1 #scale to match real-world data (vel-> pos)\n",
     "\n",
-    "# # d1_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan1.npy\")\n",
-    "# # d2_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan2.npy\")\n",
-    "# # gt_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_ground_truth.npy\")\n",
-    "# d1_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_scan1.npy\")\n",
-    "# d2_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_scan2.npy\")\n",
-    "# gt_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_ground_truth.npy\")\n",
+    "# d1_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan1.npy\")\n",
+    "# d2_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan2.npy\")\n",
+    "# gt_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_ground_truth.npy\")\n",
+    "d1_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_scan1.npy\")\n",
+    "d2_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_scan2.npy\")\n",
+    "gt_2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v4_ground_truth.npy\")\n",
     "\n",
     "\n",
-    "# d1 = np.append(d1_1, d1_2, axis = 0)\n",
-    "# d2 = np.append(d2_1, d2_2, axis = 0)\n",
-    "# gt = np.append(gt_1, gt_2, axis = 0)\n",
-    "# #_________________________________________________________________\n",
+    "d1 = np.append(d1_1, d1_2, axis = 0)\n",
+    "d2 = np.append(d2_1, d2_2, axis = 0)\n",
+    "gt = np.append(gt_1, gt_2, axis = 0)\n",
+    "#_________________________________________________________________\n",
     "\n",
     "# d1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan1.npy\")\n",
     "# d2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/ICET_Ford_v2_scan2.npy\")\n",
@@ -177,10 +212,6 @@
     "# d2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/scan2_300k_50_samples.npy\")\n",
     "# gt = np.load(\"C:/Users/Derm/Desktop/big/pshift/ground_truth_300k_50_samples.npy\")\n",
     "# gt = gt*0.1 #scale to match real-world data (vel-> pos)\n",
-    "\n",
-    "d1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/compact_scan1.npy\")\n",
-    "d2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/compact_scan2.npy\")\n",
-    "gt = np.load(\"C:/Users/Derm/Desktop/big/pshift/compact_ground_truth.npy\")\n",
     "\n",
     "#reshape but don't convert to tensor\n",
     "points_per_sample = 50          #poitns sammpled from each voxel\n",
@@ -195,13 +226,70 @@
     "print(np.shape(x_train))\n",
     "# print(np.shape(x_test))\n",
     "\n",
-    "y_train = gt[:ntrain]\n",
-    "y_test = gt[ntrain:]\n",
-    "# print(y_train)\n",
-    "# print(np.shape(y_train))\n",
-    "# print(np.shape(y_test))\n",
+    "y_train = gt[:ntrain] #for standard training/ test data\n",
+    "y_test = gt[ntrain:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(90533, 8, 3)\n",
+      "(90533, 8, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Testing new network structure informed by voxel boundaries\n",
+    "#   input both point clouds AND VOXEL BOUNDS to DNN\n",
+    "#_________________________________________________________________\n",
+    "#load data\n",
+    "d1 = np.load(\"C:/Users/Derm/Desktop/big/pshift/compact_scan1.npy\")\n",
+    "d2 = np.load(\"C:/Users/Derm/Desktop/big/pshift/compact_scan2.npy\")\n",
+    "gt = np.load(\"C:/Users/Derm/Desktop/big/pshift/compact_ground_truth.npy\")\n",
+    "LUT = np.load(\"C:/Users/Derm/Desktop/big/pshift/LUT.npy\")\n",
+    "L = np.load(\"C:/Users/Derm/Desktop/big/pshift/L.npy\")\n",
+    "U = np.load(\"C:/Users/Derm/Desktop/big/pshift/U.npy\")\n",
+    "corn = np.load(\"C:/Users/Derm/Desktop/big/pshift/corn.npy\")\n",
+    "#_________________________________________________________________\n",
     "\n",
-    "#-------------------------------------------------------------------"
+    "#loop through each element of corn and convert from spherical to cartesian\n",
+    "print(np.shape(corn))\n",
+    "new_corn = np.transpose(s2c(corn), [1,0,2,])\n",
+    "print(np.shape(new_corn))\n",
+    "\n",
+    "#reshape but don't convert to tensor\n",
+    "points_per_sample = 50          #poitns sammpled from each voxel\n",
+    "tsplit = 0.9 #0.95                   #this fraction goes into training\n",
+    "\n",
+    "scan1 = np.reshape(d1, [-1, points_per_sample, 3])\n",
+    "scan2 = np.reshape(d2, [-1, points_per_sample, 3])\n",
+    "ntrain = int(tsplit*tf.shape(scan1)[0].numpy())\n",
+    "\n",
+    "x_train = np.append(scan1[:ntrain], scan2[:ntrain], axis = 1)\n",
+    "x_test = np.append(scan1[ntrain:], scan2[ntrain:], axis = 1)\n",
+    "\n",
+    "#combine voxel bound to each training example\n",
+    "x_train = np.append(x_train, corn[:ntrain], axis = 1)\n",
+    "x_test = np.append(x_test, corn[ntrain:], axis = 1)\n",
+    "\n",
+    "# y_train = gt[:ntrain] #for standard training/ test data\n",
+    "# y_test = gt[ntrain:]\n",
+    "y_train = gt[:ntrain][:,:,0] #when using compact data\n",
+    "y_test = gt[ntrain:][:,:,0]\n",
+    "LUT = tf.convert_to_tensor(LUT)[ntrain:]\n",
+    "U = tf.convert_to_tensor(U)[ntrain:]\n",
+    "L = tf.convert_to_tensor(L)[ntrain:]\n",
+    "corn_train = corn[:ntrain]\n",
+    "corn_test = corn[ntrain:]\n",
+    "\n",
+    "# print(np.shape(x_train))\n",
+    "# print(np.shape(x_test))"
    ]
   },
   {
@@ -210,14 +298,98 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"functional_31\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_19 (InputLayer)           [(None, 108, 3)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "tf_op_layer_strided_slice_48 (T [(None, 100, 3)]     0           input_19[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "tf_op_layer_ExpandDims_18 (Tens [(None, 100, 3, 1)]  0           tf_op_layer_strided_slice_48[0][0\n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_54 (Conv2D)              (None, 100, 1, 64)   256         tf_op_layer_ExpandDims_18[0][0]  \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_99 (BatchNo (None, 100, 1, 64)   256         conv2d_54[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_55 (Conv2D)              (None, 100, 1, 64)   4160        batch_normalization_99[0][0]     \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_100 (BatchN (None, 100, 1, 64)   256         conv2d_55[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_56 (Conv2D)              (None, 100, 1, 150)  9750        batch_normalization_100[0][0]    \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_101 (BatchN (None, 100, 1, 150)  600         conv2d_56[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_18 (MaxPooling2D) (None, 2, 1, 150)    0           batch_normalization_101[0][0]    \n",
+      "__________________________________________________________________________________________________\n",
+      "tf_op_layer_Reshape_14 (TensorF [(None, 100, 3)]     0           max_pooling2d_18[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "tf_op_layer_strided_slice_49 (T [(None, 8, 3)]       0           input_19[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_14 (Concatenate)    (None, 108, 3)       0           tf_op_layer_Reshape_14[0][0]     \n",
+      "                                                                 tf_op_layer_strided_slice_49[0][0\n",
+      "__________________________________________________________________________________________________\n",
+      "dense_60 (Dense)                (None, 108, 64)      256         concatenate_14[0][0]             \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_102 (BatchN (None, 108, 64)      256         dense_60[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_61 (Dense)                (None, 108, 64)      4160        batch_normalization_102[0][0]    \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_103 (BatchN (None, 108, 64)      256         dense_61[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_15 (Flatten)            (None, 6912)         0           batch_normalization_103[0][0]    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_62 (Dense)                (None, 64)           442432      flatten_15[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_104 (BatchN (None, 64)           256         dense_62[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_63 (Dense)                (None, 3)            195         batch_normalization_104[0][0]    \n",
+      "__________________________________________________________________________________________________\n",
+      "tf_op_layer_Mul_15 (TensorFlowO [(None, 3)]          0           dense_63[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 463,089\n",
+      "Trainable params: 462,149\n",
+      "Non-trainable params: 940\n",
+      "__________________________________________________________________________________________________\n",
+      "None\n",
+      "Epoch 1/15\n",
+      "2037/2037 [==============================] - ETA: 0s - loss: 0.3246INFO:tensorflow:Assets written to: FordNetCP.kmod\\assets\n",
+      "2037/2037 [==============================] - 23s 11ms/step - loss: 0.3246 - val_loss: 0.2099\n",
+      "Epoch 2/15\n",
+      "2037/2037 [==============================] - 37s 18ms/step - loss: 0.2260 - val_loss: 0.2148\n",
+      "Epoch 3/15\n",
+      "2036/2037 [============================>.] - ETA: 0s - loss: 0.2128INFO:tensorflow:Assets written to: FordNetCP.kmod\\assets\n",
+      "2037/2037 [==============================] - 20s 10ms/step - loss: 0.2128 - val_loss: 0.1862\n",
+      "Epoch 4/15\n",
+      "2034/2037 [============================>.] - ETA: 0s - loss: 0.2083INFO:tensorflow:Assets written to: FordNetCP.kmod\\assets\n",
+      "2037/2037 [==============================] - 21s 10ms/step - loss: 0.2083 - val_loss: 0.1826\n",
+      "Epoch 5/15\n",
+      "2031/2037 [============================>.] - ETA: 0s - loss: 0.2040INFO:tensorflow:Assets written to: FordNetCP.kmod\\assets\n",
+      "2037/2037 [==============================] - 20s 10ms/step - loss: 0.2039 - val_loss: 0.1734\n",
+      "Epoch 6/15\n",
+      "2037/2037 [==============================] - 18s 9ms/step - loss: 0.2002 - val_loss: 0.1868\n",
+      "Epoch 7/15\n",
+      "2037/2037 [==============================] - 18s 9ms/step - loss: 0.1968 - val_loss: 0.1794\n",
+      "Epoch 8/15\n",
+      "2037/2037 [==============================] - 18s 9ms/step - loss: 0.1963 - val_loss: 0.1811\n",
+      "Epoch 9/15\n",
+      "1846/2037 [==========================>...] - ETA: 1s - loss: 0.1933"
+     ]
+    }
+   ],
    "source": [
     "#train network\n",
-    "from network import Net\n",
+    "# from network import Net\n",
+    "from network import TestNet as Net\n",
     "# from network import PointNet as Net\n",
     "# from network import Attention as Net\n",
     "\n",
-    "runLen = 300\n",
+    "runLen = 15\n",
     "\n",
     "def scheduler(epoch, learning_rate):\n",
     "#     part1 = 2*runLen//3\n",
@@ -248,7 +420,7 @@
     "log_dir = \"runs/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "\n",
-    "trace = model.fit(x = x_train, y = y_train, batch_size = 64, epochs=runLen, verbose=1, \n",
+    "trace = model.fit(x = x_train, y = y_train, batch_size = 32, epochs=runLen, verbose=1, \n",
     "                  validation_split = 0.2, shuffle=True, callbacks = [cp])"
    ]
   },
