re-structuring DNN for training on compact data

--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.3.0\n"
+      "2.7.0\n"
      ]
     },
     {
@@ -57,8 +57,8 @@
     "\n",
     "#need to have these two lines to work on my ancient 1060 3gb\n",
     "#  https://stackoverflow.com/questions/43990046/tensorflow-blas-gemm-launch-failed\n",
-    "physical_devices = tf.config.list_physical_devices('GPU') \n",
-    "tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
+    "# physical_devices = tf.config.list_physical_devices('GPU') \n",
+    "# tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
     "\n",
     "print(tf.__version__) #requires tensorflow 2.3\n",
     "\n",
@@ -168,17 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "significant-device",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.load_model(\"FORDNetV3.kmod\")"
+    "# model = tf.keras.models.load_model(\"FORDNetV3.kmod\")\n",
+    "model = tf.keras.models.load_model(\"FORDNetCP.kmod\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "floppy-wealth",
    "metadata": {},
    "outputs": [],
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "protective-flush",
    "metadata": {},
    "outputs": [],
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "quiet-philip",
    "metadata": {},
    "outputs": [
@@ -238,15 +239,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "466\n",
+      "184\n",
       "\n",
-      " correct soln [ 0.9469716  -0.9221112   0.05154501]\n",
+      " correct soln [-1.4823195   1.7298952   0.02789314]\n",
       "\n",
-      " estiamted soln: [[ 0.91549373 -0.93506957  0.06523528]]\n",
+      " estiamted soln: [[-1.6927743   1.67902659 -0.32185467]]\n",
       "\n",
-      " error from DNN: [[ 0.03147787  0.01295835 -0.01369026]]\n",
+      " error from DNN: [[0.21045483 0.05086865 0.34974781]]\n",
       "\n",
-      " error in means [0.02198476 0.09408194 0.00055747]\n"
+      " error in means [-0.01429355 -0.00636709 -0.00638966]\n"
      ]
     }
    ],
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "active-liverpool",
    "metadata": {},
    "outputs": [
@@ -287,20 +288,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([ 0.96293366 -0.01624743  0.02233379], shape=(3,), dtype=float32)\n",
-      "[ 5.17567    3.7603426 -0.6877998]\n",
-      "[ 4.81776    4.2091484 -0.6877998]\n"
+      "tf.Tensor([-1.4145201  -0.04725241  0.12405372], shape=(3,), dtype=float32)\n",
+      "[ 4.6472373  -4.8606296  -0.24017562]\n",
+      "[ 5.0642323  -4.424487   -0.24017562]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0548c95847e416daa44e221cfcaa924",
+       "model_id": "74ea7cca38bc4ceb8fac57e12ff7e631",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+       "ViewInteractiveWidget(height=749, layout=Layout(height='auto', width='100%'), width=960)"
       ]
      },
      "metadata": {},
@@ -546,7 +547,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -560,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
